<resources>
    <string name="app_name">mentorconnect</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="codehive_id">codeHive Id</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="confirm_password">confirm password</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="username1">Username</string>
    <string name="password1">password</string>
    <string name="login1">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">SignUp</string>
    <string name="firstname_is_required">firstName is required</string>
    <string name="lastname_is_required">lastName is required</string>
    <string name="codehaveid_is_required">codehaveId is required</string>
    <string name="email_is_required">email is required</string>
    <string name="username_is_required">UserName is required</string>
    <string name="password_is_required">password is required</string>
    <string name="confirm_password_is_required">confirm password is required</string>
    <string name="firstName_is_required">firstName is required</string>
    <string name="lastName_is_required">lastname_is_required</string>
    <string name="codeHaveid_is_required">codehaveid_is_required</string>
</resources>